Server Router Setup
Starting data modelling with MongoDB and Mongoose
